ph - fixed bug with the title of graphs disappering

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,9 +12,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>District 25 Vote Distribution</title>
   </head>
+
   <body>
+    <h1>District 25 State Assembly Election Results</h1>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
